# avgcol

./: Cargo.toml  LICENSE_MIT  README.md  rust-toolchain.toml
src/: lib.rs
tests/: mod.rs  web.rs
