[package]
name = "avgcol"
version = "0.2.0"
description = "Quickly generate average colours for your images"
authors = ["Juliette Cordor"]
edition = "2021"

[features]
remote_image = ["reqwest"]

[dependencies]
base64 = "0.13.0"
bytes = "1.2.1"
image = "0.24.2"
thiserror = "1.0.37"
reqwest = { version = "0.11.10", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"

