[package]
name = "avgcol"
version = "0.2.0"
description = "Quickly generate average colours for your images"
authors = ["Juliette Cordor"]
edition = "2021"

[features]
remote_image = ["reqwest"]

[dependencies]
base64 = "0.13"
bytes = "1.2"
image = "0.24"
thiserror = "1.0"
reqwest = { version = "0.11", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"

